@@ -24,16 +24,26 @@ fi
 AC_SUBST(MONO)
 AC_SUBST(MCS)
 
+PKG_CHECK_MODULES(GAPI, gapi-2.0 >= 2.3.90)
+AC_PATH_PROG(GAPI_PARSER, gapi2-parser, no)
+AC_PATH_PROG(GAPI_FIXUP, gapi2-fixup, no)
+AC_PATH_PROG(GAPI_CODEGEN, gapi2-codegen, no)
+
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.4.0)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
-PKG_CHECK_MODULES(STETIC, gtk-sharp-2.0 >= 2.3.91 gnome-sharp-2.0)
+PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp-2.0 >= 2.3.91)
+AC_SUBST(GTK_SHARP_CFLAGS)
+AC_SUBST(GTK_SHARP_LIBS)
+
+PKG_CHECK_MODULES(STETIC, gtk-sharp-2.0 >= 2.3.91 gnome-sharp-2.0 glade-sharp-2.0 gconf-sharp-2.0)
 AC_SUBST(STETIC_LIBS)
 
 AC_OUTPUT([
 Makefile
 glue/Makefile
+metacity-sharp/Makefile
 libstetic/Makefile
 stetic/Makefile
 ])
